Adds global leaderboard

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,3 +29,5 @@
 @import "components/info-box";
 @import "components/tabs";
 @import "components/page";
+@import "components/footer";
+@import "components/leaderboard";
