--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,7 @@
       <div class="footer__container">
         <div class="footer__links">
           <%= link_to "Leaderboard", leaderboard_path, class: "footer__link" %>
+          <%= link_to "About", about_path, class: "footer__link" %>
         </div>
         <div class="footer__copyright">
           Arbitrage &copy; <%= Time.current.year %>
