--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -20,43 +20,32 @@
     }
 
     &__brand {
-        font-weight: bold;
-        font-size: 16px;
         display: flex;
         flex-direction: column;
-        gap: 4px;
+        gap: 2px;
     }
 
-    &__brand-link {
+    &__brand-top {
+        display: flex;
+        align-items: baseline;
+        font-size: 16px;
+    }
+
+    &__logo {
+        font-weight: bold;
         color: $color-text;
-        text-decoration: none;
-
-        &:hover {
-            color: $color-link-hover;
-        }
     }
 
-    &__location {
-        font-size: 11px;
+    &__tagline {
         font-weight: normal;
         color: #666;
+        font-style: italic;
     }
 
     &__nav {
         display: flex;
         align-items: center;
         gap: 15px;
-    }
-
-    &__cash {
-        font-weight: bold;
-        color: #2e7d32;
-        font-size: 13px;
-    }
-
-    &__welcome {
-        font-weight: bold;
-        color: $color-text;
     }
 
     &__link {
@@ -71,6 +60,29 @@
             color: $color-link-hover;
         }
     }
+
+    &__back-link {
+        display: flex;
+        align-items: center;
+        gap: 6px;
+        color: $color-link;
+        text-decoration: none;
+        font-size: 13px;
+        font-weight: 500;
+
+        &:hover {
+            color: $color-link-hover;
+            text-decoration: underline;
+        }
+
+        &:visited {
+            color: $color-link;
+        }
+    }
+
+    &__back-icon {
+        vertical-align: middle;
+    }
 }
 
 // ============================================
@@ -79,14 +91,29 @@
 
 .game-stats {
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    gap: 2px;
+    align-items: center;
+    gap: 8px;
+    font-size: 12px;
+    color: $color-text;
 
-    &__item {
-        font-size: 12px;
+    &__location {
         font-weight: bold;
-        color: $color-text;
-        white-space: nowrap;
+    }
+
+    &__separator {
+        color: #999;
+    }
+
+    &__day {
+        font-weight: normal;
+    }
+
+    &__cash {
+        font-weight: bold;
+        color: #2e7d32;
+    }
+
+    &__net-worth {
+        font-weight: bold;
     }
 }
